# ML-System-project-dicoding

./: .gitignore  Eksperimen_SML_Daniel Wuliutomo.txt  Workflow-CI.txt  main.py  pyproject.toml
Membangun_model/: Dagshub.txt  modelling.py  modelling_tuning.py
Monitoring_dan_Logging/: Dockerfile  docker-compose.yml  inference.py  prometheus.yml  prometheus_exporter.py  requirements.txt
