[project]
name = "ML-System-dicoding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "mlflow==2.19.0",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
